awx-ingress-minikube.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx
  namespace: awx
spec:
  rules:
  - host: awx.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: awx-service
            port:
              number: 80
