awx-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  name: awx
  namespace: awx
spec:
  rules:
  - host: awx.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: awx-service
            port:
              number: 80
  tls:
  - hosts:
    - awx.k8s.rsletten.com
    secretName: awx-prod-cert
